in the ctor, be careful when setting the toplevelwidget

BUG: 205713
FIXED-IN: 4.12
REVIEW: 111412